--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: inmetwrangler
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Jonatan", "Tatsch", email = "lhmet@ufsm.br", role = c("aut", "cre"))
+Description: Tools to process raw data files from INMET's automatic weather stations.
 Depends: R (>= 3.4.1)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 Imports: tidyverse,
     magrittr,
-    stringr
+    stringr,
+    dplyr,
+    purrr,
+    readr
 RoxygenNote: 6.0.1
