--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: inmetwrangler
-Title: What the Package Does (one line, title case)
+Title: Wrangle INMET stations data files
 Version: 0.0.0.9000
 Authors@R: person("Jonatan", "Tatsch", email = "lhmet@ufsm.br", role = c("aut", "cre"))
 Description: Tools to process raw data files from INMET's automatic weather stations.
